# netum

docker/: build.sh  compose.yml
netum_api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
netum_api/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240204_174756_update_book.rs  m20240218_175044_add_identifier_and_isbn_to_book.rs
netum_api/src/: main.rs
netum_api/src/database/entities/: book.rs  location.rs  mod.rs
netum_api/src/entities/: prelude.rs
netum_api/src/routes/books/: mod.rs
netum_api/src/tables/books/: mod.rs
netum_web/: .gitignore  next.config.mjs  package.json  tailwind.config.js
netum_web/src/: next-auth.d.ts
netum_web/src/app/: layout.tsx  page.tsx
netum_web/src/app/api/auth/[...nextauth]/: route.ts
netum_web/src/app/books/: page.tsx
netum_web/src/app/components/: piechart.tsx  statbar.tsx
netum_web/src/app/components/Navigation/: divider.tsx  paddedcontent.tsx  pagelayout.tsx  pagepath.tsx
netum_web/src/app/games/: page.tsx
netum_web/src/app/scans/: page.tsx
netum_web/src/app/utils/: authOptions.ts
