[package]
name = "netum_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
log = "0.4.20"
reqwest = "0.11.24"
rocket = {version = "0.5.0", features=["json", "uuid"]}
sea-orm = {version = "0.12.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "mock", "with-json", "with-uuid", "postgres-array", "with-chrono"]}
serde = "1.0.196"
serde_json = "1.0.113"
migration = {path="./migration"}